fixing send button missing on mobile on contact form

--- a/src/App.css
+++ b/src/App.css
@@ -113,7 +113,7 @@ section {
   justify-content: center;
   text-align: center;
   width: 100%;
-  height: 100vh; 
+  height: 150vh; 
   scroll-snap-align: center;
  background-image: url("./homebackground.png");
   background-repeat: no-repeat;
